fix text align to center when in mobile in r3 responsive design

--- a/styles/ResposiveDesign.css
+++ b/styles/ResposiveDesign.css
@@ -87,6 +87,10 @@
     height: 200px;
   }
 
+  .content h3 {
+    text-align: center;
+  }
+
   .r4 {
     width: 100%;
     font-size: 20px;
